# omnia

./: .gitignore  PROJECT.md  README.md  _debug_registry.py  lmstudio_log  lmstudio_model_load.md  lmstudio_streaming_events.md  trellis-for-windows-original-fork-readme.md
.agents/: COPILOT_INSTRUCTIONS.md  ORCHESTRATOR.md
.agents/prompts/: backend.md  build.md  debugger.md  docs.md  frontend.md  git.md  mcp.md  refactor.md  reviewer.md  test.md
.github/: copilot-instructions.md
.github/agents/: backend-coherence.agent.md  backend.agent.md  build.agent.md  coherence-validator.agent.md  debugger.agent.md  docs.agent.md  frontend-coherence.agent.md  frontend.agent.md  git.agent.md  mcp.agent.md  refactor.agent.md  reviewer.agent.md  test.agent.md
backend/: README.md  __main__.py  debug_test.py  pyproject.toml  test_output.txt  test_run.txt
backend/api/middleware/: exception_handler.py  origin_guard.py  rate_limit.py
backend/api/routes/: __init__.py  _tool_loop.py  audit.py  cad.py  calendar.py  charts.py  chat.py  config.py  email.py  events.py  mcp.py  mcp_memory.py  memory.py  models.py  notes.py  plugins.py  settings.py  tasks.py  vector_store.py  voice.py  whiteboards.py
backend/core/: __init__.py  app.py  config.py  context.py  event_bus.py  http_security.py  plugin_base.py  plugin_manager.py  plugin_models.py  protocols.py  tool_registry.py
backend/db/: __init__.py  database.py  models.py  plugin_state.py
backend/plugins/agent_task/: __init__.py  plugin.py
backend/plugins/cad_generator/: __init__.py  client.py  plugin.py
backend/plugins/calendar/: __init__.py  plugin.py  utils.py
backend/plugins/chart_generator/: __init__.py  plugin.py
backend/plugins/clipboard/: __init__.py  plugin.py
backend/plugins/email_assistant/: __init__.py  plugin.py
backend/plugins/file_search/: __init__.py  plugin.py  readers.py  searcher.py
backend/plugins/mcp_client/: __init__.py  plugin.py
backend/plugins/media_control/: __init__.py  executor.py  plugin.py
backend/plugins/memory/: __init__.py  plugin.py
backend/plugins/network_probe/: plugin.py
backend/plugins/news/: __init__.py  feed_reader.py  plugin.py
backend/plugins/notes/: __init__.py  plugin.py
backend/plugins/notifications/: __init__.py  plugin.py  timer_manager.py
backend/plugins/pc_automation/: README.md  __init__.py  constants.py  executor.py  plugin.py  security.py  validators.py
backend/plugins/system_info/: __init__.py  plugin.py
backend/plugins/weather/: __init__.py  client.py  plugin.py
backend/plugins/web_search/: __init__.py  client.py  plugin.py
backend/plugins/whiteboard/: plugin.py  store.py
backend/services/: audio_utils.py  context_manager.py  conversation_file_manager.py  email_service.py  embedding_client.py  llm_service.py  lmstudio_service.py  mcp_session.py  memory_service.py  note_service.py  preferences_service.py  qdrant_service.py  stt_service.py  task_runner.py  task_scheduler.py  thinking_parser.py  tts_service.py  vram_monitor.py  ws_connection_manager.py
backend/tests/: conftest.py  test_app.py  test_cad_generator_plugin.py  test_cad_proxy_route.py  test_calendar_plugin.py  test_chart_generator_plugin.py  test_concurrent.py  test_config.py  test_confirmation_audit.py  test_confirmation_toggle.py  test_context.py  test_conversation_file_manager.py  test_email_plugin.py  test_email_route.py  test_email_service.py  test_event_bus.py  test_file_upload.py  test_mcp_client_plugin.py  test_memory_service.py  test_models.py  test_note_service.py  test_notifications_plugin.py  test_pc_automation.py  test_pc_executor.py  test_pc_validators.py  test_plugin_models.py  test_qdrant_service.py  test_screenshot.py  test_security_framework.py  test_settings.py  test_stt_service.py  test_tool_calling.py  test_tool_loop.py  test_tool_registry.py  test_trellis_client.py  test_tts_service.py  test_voice_tool_calling.py  test_voice_ws.py  test_vram_monitor.py  test_websocket.py
backend/tests/test_plugins/: test_plugin_manager.py
config/: default.yaml  system_prompt.md
docs/: guida-lmstudio.md  ideas.md  n8n-mcp-setup.md  phase4-voice-audit.md  trellis-setup.md
docs/phases/: 00-overview.md  fase-00-setup.md  fase-01-core-backend.md  fase-01.5-multimodale.md  fase-01.6-persistenza.md  fase-01.7-code-block.md  fase-02-frontend.md  fase-02.5-hardening.md  fase-03-plugin-system.md  fase-04-voce.md  fase-05-pc-automation.md  fase-06-iot.md  fase-07-web-calendar-meteo.md  fase-07.5-media-notifiche-clipboard.md  fase-07.6-file-search-news.md  fase-08-polish-server.md  fase-09-memory.md  fase-10-task-runner.md  fase-11-mcp-client.md  fase-12-3d-trellis.md  fase-13-note-system.md  fase-14-chart-generator.md  fase-15-email-assistant.md  fase-16-drawing-canvas.md
frontend/: README.md  electron-builder.yml  package-lock.json  package.json
frontend/src/main/: index.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.vue  env.d.ts  main.ts
frontend/src/renderer/src/assets/: base.css  icons.ts  main.css
frontend/src/renderer/src/components/: ErrorBoundary.vue  ModalContainer.vue  TitleBar.vue
frontend/src/renderer/src/composables/: useCalendar.ts  useChat.ts  useCodeBlocks.ts  useEventsWebSocket.ts  useMarkdown.ts  useModal.ts  useToast.ts  useVoice.ts
frontend/src/renderer/src/router/: index.ts
frontend/src/renderer/src/services/: ws.ts  (+1 more)
scripts/: setup.ps1  start-dev.ps1  start-trellis.ps1
(+107 files in other folders)
